kubernetes/base-apps/kube-system/cilium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "hubble.${cluster_domain}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
      backendRefs:
        - name: hubble-ui
          port: 80
